--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,18 +1,17 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "https://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  name        : "Pujan shah"
+  uri         : "shahpuj.github.io"
+  email       : "pujan@vt.edu"
+  bio         : "Computer Engineering at VT"
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+
+
 
 Name2 Name2:
-  name        : "Name2 Name2"
-  email       : "name2@name2.com"
-  bio         : "I ordered what?"
-  avatar      : "bio-photo.jpg"
-  twitter     : "name2"
-  google_plus : "Name"
+  name        : "Pujan shah"
+  uri         : "shahpuj.github.io"
+  email       : "pujan@vt.edu"
+  bio         : "Computer Engineering at VT"
+  avatar      : "bio-photo-2.jpg"
